# my-small-projects

./: .gitignore  README.md
MoviePicker/src/: Main.java  movie-list.txt
calc/: CMakeLists.txt  Makefile  calc  calc.c  libcalc.c  libcalc.h  main.C  test.py  whiteboard.txt
calc/include/: calc.h
calc/src/: calc.c
java_echo/: EchoClient.java  EchoRunner.java  EchoServer.java  FailedToStartServerException.java  MyLogger.java  testclient.py
java_multi_zip/src/: Main.java  Unzip.java  Zip.java  ZipStatus.java  compressor.java  decompressor.java  gunzip.java  gzip.java
jtexteditor/src/: EditorSettings.java  FontPicker.java  JTextEditor.java  Main.java
jws/: jws.conf  notes.txt  readme.md
jws/com/: InvalidHttpRequest.java  getRequestHandler.java  headRequestHandler.java  httpRequest.java  httpResponse.java  jws.java  jwsConfig.java  requestHandler.java
jws/html/: index.html
port-scanner/: CMakeLists.txt  Makefile  portscanner
port-scanner/include/: nxs_options.h  nxs_utils.hpp
port-scanner/liboptions/: CMakeLists.txt  Makefile  liboptions.so.1  liboptions.so.1.0
port-scanner/liboptions/include/: liboptions.h
port-scanner/liboptions/src/: liboptions.c
port-scanner/src/: main.cpp  nxs_options.cpp
py-portscanner/: README.md  options.py  py-portscanner.py
py-portscanner/engine/: error.py  protocol.py  tcp_scan.py
twelve_days_of_rust/: Cargo.toml
twelve_days_of_rust/src/: main.rs
win-echo-srv/: testclient.py
win-echo-srv/echosrv/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  README.md  ZERO_CHECK.vcxproj  echosrv.sln  (+3 more)
(+14 files in other folders)
